--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-    <nav class="nav">
+      <nav class="nav">
         <div class="navCenter">
-            <div>
-                <img src="images/avatar.png" width="80px" style="border-radius: 50%;" class="navLogo" alt="Can Dinler">
+            <div class="navHeader">
+                <img src="images/avatar.png" class="navLogo" alt="" width="60px" style="border-radius: 50%;">
+                <button class="navBtn">
+                    <i class="fas fa-bars"></i>
+                </button>
             </div>
             <ul class="navLinks">
                 <li> <a href="#">Main Page</a></li>
